--- a/README.Rmd
+++ b/README.Rmd
@@ -15,12 +15,14 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+
+library(kableExtra)
 ```
 
 ## Introduction
 
 ## Model Description
-We present a dynamic model consisting of five steps. Below we define the model steps, the associated variables (Table 2), and the probabilities determining each variable’s distribution (Table 3). All variables are defined for each member of the study population, and we allow some variables to change over time (measured in weeks). Figure 1 illustrates the possible sources of confounding and bias present in studies designed to evaluate influenza VE [15,16]. Model assumptions are shown in Web Table 1.
+We present a dynamic model consisting of five steps. Below we define the model steps, the associated variables (Table 2), and the probabilities determining each variable’s distribution (Table 3). All variables are defined for each member of the study population, and we allow some variables to change over time (measured in weeks). Figure 1 illustrates the possible sources of confounding and bias present in studies designed to evaluate influenza VE [15,16]. Model assumptions are shown in Table 1.
 
 **Step 1:** Covariates. We assume that people within the population can be classified with a health status (X) of either “healthy” or “frail” and a health awareness (U) of either “high” or “low”.
 
@@ -31,6 +33,24 @@ We present a dynamic model consisting of five steps. Below we define the model s
 **Step 4:** Seeking medical care for ARI. A person with an ARI in week j may seek medical care (Mj). The probability of seeking medical care depends on Yj, as only those individuals who have an ARI may seek medical care, and it may be different for influenza ARI and non-influenza ARI patients. This probability may also depend on V and U.
 
 **Step 5:** Testing for influenza infection. We assume that each person who seeks medical care for ARI is tested for influenza infection. Let Tj denote the binary test result, where T_j=1 or 0 for positive or negative, respectively.
+
+```{r eval=TRUE, echo=FALSE}
+dt <- data.frame(Assumption = c(letters[1:10]),
+                 Description = c("Each person is assigned two binary covariates: health status and health awareness, which are constant over time",
+                                 "Everyone is either effectively vaccinated prior to the study or remains unvaccinated throughout the study, and vaccination status is determined without error",
+                                 "Everyone in the study population is susceptible at the beginning of the study",
+                                 "A person can only have one influenza ARI during the study",
+                                 "A person can have at most one non-influenza ARI per week",
+                                 "The probabilities of influenza ARI and non-influenza ARI do not depend on a person’s health awareness given his/her health status",
+                                 "The probability of seeking medical care does not depend on a person’s health status given his/her health awareness",
+                                 "Influenza test specificity and sensitivity do not depend on health status, health awareness, or vaccination status, given a person’s influenza infection status",
+                                 "Every person who seeks medical care is tested for influenza infection",
+                                 "A person with no ARI does not seek medical care"))
+
+dt %>%
+  kbl(caption = "Table 1. Model assumptions") %>%
+  kable_classic(full_width = F, html_font = "Cambria")
+```
 
 ## Simulation Program
 
