--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,7 @@ options(scipen=999)
 # load packages
 library(kableExtra)
 library(tidyr)
+library(dplyr)
 ```
 
 ## Introduction
@@ -71,6 +72,7 @@ inputs %>%
   kable_classic(full_width = F, html_font = "Cambria")
 
 ```
+
 ### Running The Code
 To run the simulation program using an input CSV file, first run `model4.trueve()` and then using the output from the true VE program, run `model4.flusim()` using the same input file.
 ```{r run_code, eval=FALSE}
